Changing the price

--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
                                 alt="Silk Face Cream" class="product-img">
                         </div>
                         <div class="product-details">
-                            <h3 class="product-title">Silk Face Cream</h3>
+                            <h3 class="product-title">Royal Touch</h3>
                             <p class="product-category">Moisturizer</p>
                             <div class="price-row">
-                                <span class="price" data-price="20.00">$20.00</span>
+                                <span class="price" data-price="20.00">LE 200.00</span>
                                 <button class="btn-text buy-btn" data-product="Silk Face Cream" data-price="20.00"
                                     data-img="https://images.unsplash.com/photo-1620916566398-39f1143ab7be?ixlib=rb-4.0.3&auto=format&fit=crop&w=150&q=80">Add
                                     to Cart</button>
@@ -136,10 +136,10 @@
                             <img src="images/image1.jpg" alt="Golden Serum" class="product-img">
                         </div>
                         <div class="product-details">
-                            <h3 class="product-title">Golden Glow Serum</h3>
+                            <h3 class="product-title">Argan Hair Serum</h3>
                             <p class="product-category">Treatment</p>
                             <div class="price-row">
-                                <span class="price" data-price="15.00">$15.00</span>
+                                <span class="price" data-price="15.00">LE 170.00</span>
                                 <button class="btn-text buy-btn" data-product="Golden Glow Serum" data-price="15.00"
                                     data-img="images/image1.jpg">Add
                                     to Cart</button>
@@ -153,10 +153,10 @@
                             <img src="images/image2.png" alt="Clay Mask" class="product-img">
                         </div>
                         <div class="product-details">
-                            <h3 class="product-title">Purifying Clay Mask</h3>
+                            <h3 class="product-title">Sweet Caress </h3>
                             <p class="product-category">Cleanser</p>
                             <div class="price-row">
-                                <span class="price" data-price="30.00">$30.00</span>
+                                <span class="price" data-price="30.00">LE 200.00</span>
                                 <button class="btn-text buy-btn" data-product="Purifying Clay Mask" data-price="30.00"
                                     data-img="images/image2.png">Add
                                     to Cart</button>
@@ -218,5 +218,6 @@
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
