--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <div class="product-card fade-in delay-100">
                         <div class="product-image-container">
                             <span class="badge">Best Seller</span>
-                            <img src="https://images.unsplash.com/photo-1620916566398-39f1143ab7be?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80"
+                            <img src="images/image0.jpg"
                                 alt="Silk Face Cream" class="product-img">
                         </div>
                         <div class="product-details">
@@ -124,7 +124,7 @@
                             <div class="price-row">
                                 <span class="price" data-price="20.00">LE 200.00</span>
                                 <button class="btn-text buy-btn" data-product="Silk Face Cream" data-price="20.00"
-                                    data-img="https://images.unsplash.com/photo-1620916566398-39f1143ab7be?ixlib=rb-4.0.3&auto=format&fit=crop&w=150&q=80">Add
+                                    data-img="images/image0.jpg">Add
                                     to Cart</button>
                             </div>
                         </div>
@@ -221,3 +221,4 @@
 
 
 </html>
+
