Revise product showcase titles and categories
Updated product showcase section with new product titles and categories.

--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
         <section id="products" class="section products">
             <div class="container">
                 <div class="section-header text-center fade-in">
-                    <h2 class="section-title">The Essentials</h2>
-                    <p class="section-subtitle">Curated for maximum radiance.</p>
+                    <h2 class="section-title">Gentle Care</h2>
+                    <p class="section-subtitle">Visible result</p>
                 </div>
 
                 <div class="product-grid">
@@ -120,7 +120,7 @@
                         </div>
                         <div class="product-details">
                             <h3 class="product-title">Royal Touch</h3>
-                            <p class="product-category">Moisturizer</p>
+                            <p class="product-category">Body Butter</p>
                             <div class="price-row">
                                 <span class="price" data-price="20.00">LE 200.00</span>
                                 <button class="btn-text buy-btn" data-product="Silk Face Cream" data-price="20.00"
@@ -137,7 +137,7 @@
                         </div>
                         <div class="product-details">
                             <h3 class="product-title">Argan Hair Serum</h3>
-                            <p class="product-category">Treatment</p>
+                            <p class="product-category">Hair Care</p>
                             <div class="price-row">
                                 <span class="price" data-price="15.00">LE 170.00</span>
                                 <button class="btn-text buy-btn" data-product="Golden Glow Serum" data-price="15.00"
@@ -150,15 +150,15 @@
                     <!-- Product 3 -->
                     <div class="product-card fade-in delay-300">
                         <div class="product-image-container">
-                            <img src="images/image2.png" alt="Clay Mask" class="product-img">
+                            <img src="images/image2.jpg" alt="Clay Mask" class="product-img">
                         </div>
                         <div class="product-details">
                             <h3 class="product-title">Sweet Caress </h3>
-                            <p class="product-category">Cleanser</p>
+                            <p class="product-category">Body Butter</p>
                             <div class="price-row">
                                 <span class="price" data-price="30.00">LE 200.00</span>
                                 <button class="btn-text buy-btn" data-product="Purifying Clay Mask" data-price="30.00"
-                                    data-img="images/image2.png">Add
+                                    data-img="images/image2.jpg">Add
                                     to Cart</button>
                             </div>
                         </div>
@@ -170,7 +170,7 @@
         <!-- Editorial / About -->
         <section id="about" class="section editorial-split">
             <div class="editorial-content fade-in">
-                <h2 class="section-title">Embrace Your <br><i>Natural Beauty</i></h2>
+                <h2 class="section-title">Beauty in <br><i>Every Drop</i></h2>
                 <p>Alvera by Ash began with a simple philosophy: skincare should be a ritual, not a chore. We blend
                     ancient botanical wisdom with modern dermatology to create products that nourish not just your skin,
                     but your soul.</p>
@@ -221,4 +221,5 @@
 
 
 </html>
+
 
