--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <div class="container footer-layout">
             <div class="footer-col">
                 <h3>Alvera</h3>
-                <p>Cairo • Dubai</p>
+                <p>All over the egypt</p>
             </div>
             <div class="footer-col">
                 <a href="#products">Shop</a>
@@ -221,5 +221,6 @@
 
 
 </html>
+
 
 
