--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <a href="#products" class="btn btn-primary">Discover the Ritual</a>
             </div>
             <div class="editorial-image fade-in delay-200">
-                <img src="images/image4.jpg" alt="Natural Ingredients">
+                <img src="images/photo.jfif" alt="Natural Ingredients">
             </div>
         </section>
 
@@ -221,6 +221,7 @@
 
 
 </html>
+
 
 
 
