--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="cart-footer">
             <div class="cart-total">
                 <span>Total</span>
-                <span id="cart-total-price">$0.00</span>
+                <span id="cart-total-price">EGP0.00</span>
             </div>
             <button class="btn btn-primary full-width">Checkout</button>
         </div>
@@ -221,6 +221,7 @@
 
 
 </html>
+
 
 
 
