--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                 <span>Total</span>
                 <span id="cart-total-price">EGP0.00</span>
             </div>
+            <div id="discount-box" style="margin-top:10px;"></div>
             <button class="btn btn-primary full-width">Checkout</button>
         </div>
     </div>
@@ -221,6 +222,7 @@
 
 
 </html>
+
 
 
 
