--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                             <h3 class="product-title">Sweet Caress </h3>
                             <p class="product-category">Body Butter</p>
                             <div class="price-row">
-                                <span class="price" data-price="200.00">LE 200.00</span>
+                                <span class="price" data-price="200.00"></span>
                                 <button class="btn-text buy-btn" data-product="Purifying Clay Mask" data-price="200.00"
                                     data-img="images/image2.jpg">Add
                                     to Cart</button>
@@ -222,6 +222,7 @@
 
 
 </html>
+
 
 
 
