--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                             <h3 class="product-title">Argan Hair Serum</h3>
                             <p class="product-category">Hair Care</p>
                             <div class="price-row">
-                                <span class="price" data-price="170.00">LE 170.00</span>
+                                <span class="price" data-price="170.00"></span>
                                 <button class="btn-text buy-btn" data-product="Golden Glow Serum" data-price="170.00"
                                     data-img="images/image1.jpg">Add
                                     to Cart</button>
@@ -222,6 +222,7 @@
 
 
 </html>
+
 
 
 
