--- a/index.html
+++ b/index.html
@@ -117,14 +117,14 @@
                         <div class="product-image-container">
                             <span class="badge">Best Seller</span>
                             <img src="images/image0.jpg"
-                                alt="Silk Face Cream" class="product-img">
+                                alt="royal touch body butter" class="product-img">
                         </div>
                         <div class="product-details">
                             <h3 class="product-title">Royal Touch</h3>
                             <p class="product-category">Body Butter</p>
                             <div class="price-row">
                                 <span class="price" data-price="200.00"></span>
-                                <button class="btn-text buy-btn" data-product="Silk Face Cream" data-price="200.00"
+                                <button class="btn-text buy-btn" data-product="royal touch body butter" data-price="200.00"
                                     data-img="images/image0.jpg">Add
                                     to Cart</button>
                             </div>
@@ -222,6 +222,7 @@
 
 
 </html>
+
 
 
 
