--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@
                     <!-- Product 2 -->
                     <div class="product-card fade-in delay-200">
                         <div class="product-image-container">
-                            <img src="images/image1.jpg" alt="Golden Serum" class="product-img">
+                            <img src="images/image1.jpg" alt="sweet caress body butter" class="product-img">
                         </div>
                         <div class="product-details">
                             <h3 class="product-title">Argan Hair Serum</h3>
                             <p class="product-category">Hair Care</p>
                             <div class="price-row">
                                 <span class="price" data-price="170.00"></span>
-                                <button class="btn-text buy-btn" data-product="Golden Glow Serum" data-price="170.00"
+                                <button class="btn-text buy-btn" data-product="argan hair serum" data-price="170.00"
                                     data-img="images/image1.jpg">Add
                                     to Cart</button>
                             </div>
@@ -151,14 +151,14 @@
                     <!-- Product 3 -->
                     <div class="product-card fade-in delay-300">
                         <div class="product-image-container">
-                            <img src="images/image2.jpg" alt="Clay Mask" class="product-img">
+                            <img src="images/image2.jpg" alt="" class="product-img">
                         </div>
                         <div class="product-details">
                             <h3 class="product-title">Sweet Caress </h3>
                             <p class="product-category">Body Butter</p>
                             <div class="price-row">
                                 <span class="price" data-price="200.00"></span>
-                                <button class="btn-text buy-btn" data-product="Purifying Clay Mask" data-price="200.00"
+                                <button class="btn-text buy-btn" data-product="sweet caress" data- body butterprice="200.00"
                                     data-img="images/image2.jpg">Add
                                     to Cart</button>
                             </div>
@@ -222,6 +222,7 @@
 
 
 </html>
+
 
 
 
