--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                             <p class="product-category">Body Butter</p>
                             <div class="price-row">
                                 <span class="price" data-price="200.00"></span>
-                                <button class="btn-text buy-btn" data-product="sweet caress" data- body butterprice="200.00"
+                                <button class="btn-text buy-btn" data-product="sweet caress" data-price="200.00"
                                     data-img="images/image2.jpg">Add
                                     to Cart</button>
                             </div>
@@ -222,6 +222,7 @@
 
 
 </html>
+
 
 
 
